--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -199,6 +199,10 @@ figure {
     border-radius: $border-radius;
     -webkit-transition: $global-transition;
     transition: $global-transition;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
 
   > a {
